--- a/app/recipes/recipes.module.css
+++ b/app/recipes/recipes.module.css
@@ -2546,6 +2546,7 @@
   display: grid;
   place-items: center;
   background: rgba(0, 0, 0, 0.06);
+  opacity: 0.55;
 }
 
 .categoryLeft {
@@ -2586,7 +2587,7 @@
   position: relative;
 }
 
-.categoryRowOver {
+/*.categoryRowOver {
   outline: 2px solid rgba(0,0,0,0.08);
   outline-offset: 2px;
-}
+}*/
