--- a/app/recipes/recipes.module.css
+++ b/app/recipes/recipes.module.css
@@ -99,6 +99,25 @@
   color: #111;
   text-decoration: none;
 }
+.RecipeTabBadge {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 16px;
+  border: 1px solid rgba(0, 0, 0, 0.08);
+  background: rgba(255, 255, 255, 0.62);
+  /*box-shadow: 0 10px 20px rgba(0, 0, 0, 0.06);*/
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  font-weight: 500;
+  font-size: 13px;
+  user-select: none;
+  white-space: nowrap;
+  height: 30px;
+  width: 30px;
+  color: #111;
+  text-decoration: none;
+}
 
 .tabBadgeActive {
   /*border: 1px solid rgba(0, 0, 0, 0.16);
@@ -2330,9 +2349,9 @@
 
 
 .recipeHeroChip {
-  position: absolute;
-  right: 12px;
-  bottom: 12px;
+  /*position: absolute;*/
+  /*right: 12px;
+  bottom: 12px;*/
   padding: 8px 10px;
   border-radius: 999px;
   border: 1px solid rgba(0, 0, 0, 0.08);
@@ -2344,6 +2363,15 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  height: 30px;
+}
+.recipePhotoRow {
+  position: absolute;
+  right: 12px;
+  bottom: 12px;
+  display: flex;
+  gap: 8;
+  align-items: center;
 }
 
 .recipeBody {
@@ -2591,3 +2619,16 @@
   outline: 2px solid rgba(0,0,0,0.08);
   outline-offset: 2px;
 }*/
+
+.iconSpin {
+  animation: spin 0.8s linear infinite;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
