--- a/app/components/RecMenu/RecMenu.module.css
+++ b/app/components/RecMenu/RecMenu.module.css
@@ -197,3 +197,8 @@
   height: 22px;
   display: block;
 }
+.hiddenOnKeyboard {
+  opacity: 0;
+  pointer-events: none;
+  transform: translateY(12px);
+}
