--- a/app/recipes/recipes.module.css
+++ b/app/recipes/recipes.module.css
@@ -2124,14 +2124,11 @@
 
 .sheetHeader {
   height: 56px;
-  padding: 12px 16px;
+  padding: 10px 16px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  
- 
-
-
+  margin-top: 6px;
 }
 
 .sheetIconBtn {
@@ -2143,11 +2140,14 @@
   backdrop-filter: blur(10px);
   font-size: 18px;
   cursor: pointer;
+  border: 1px solid #00000014;
+  
 }
 
 .sheetIconBtnDisabled {
-  opacity: 0.4;
+  opacity: 0.7;
   cursor: not-allowed;
+  color:#757575;
 }
 
 .sheetContent {
@@ -2569,6 +2569,14 @@
   gap: 10px;
   padding: 14px 14px 10px;
 }
+.categoryAddRowNR {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding: 0;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
 
 .categoryTrashBtn {
   width: 34px;
@@ -2625,6 +2633,7 @@
 }*/
 
 .iconSpin {
+  display: inline-block;
   animation: spin 0.8s linear infinite;
 }
 
